--- a/后端编写流程图说明.md
+++ b/后端编写流程图说明.md
@@ -1,9 +1,9 @@
-*第一点*：对应carsim中的每一个页面，打开匹配的par文件，确保了解每一个参数的功能后，将其添加至流程图；
-*第二点*：为避免统计错漏，每打开一个页面，当前页面中的所有参数都必须统计，未统计的只允许是需要跳转的页面，并在流程图中为跳转的子结构标注。如：<c style="color: red;">【启用】暂未统计</c>；
-*第三点*：为保证软件联合仿真，所有参数，统计并保留carsim中的参数名；
-*第四点*：为方便前端编写，确定每个参数的学术名和标准单位；
-*第五点*：Rsim流程图配置多少，后端配置文件及其参数一并更改；
-*第六点*：检查当前开发代码中已经有的功能（代表该数据结构已经启用），对应于流程图中标绿。（该流程图作为车辆动力学功能开发的进度条）
-*第七点*：Carsim参数结构中不合理的地方，标橙色，并提出改进建议，（但仍然保留carsim的参数名字，便于数据结构转换）。
-*第八点*：思考需要前端实现的功能，并且进行样式上的标注。
-*第九点*：需要美术配合和示意图的地方，请标注
+## *第一点*：对应carsim中的每一个页面，打开匹配的par文件，确保了解每一个参数的功能后，将其添加至流程图；
+## *第二点*：为避免统计错漏，每打开一个页面，当前页面中的所有参数都必须统计，未统计的只允许是需要跳转的页面，并在流程图中为跳转的子结构标注。如：<c style="color: red;">【启用】暂未统计</c>；
+## *第三点*：为保证软件联合仿真，所有参数，统计并保留carsim中的参数名；
+## *第四点*：为方便前端编写，确定每个参数的学术名和标准单位；
+## *第五点*：Rsim流程图配置多少，后端配置文件及其参数一并更改；
+## *第六点*：检查当前开发代码中已经有的功能（代表该数据结构已经启用），对应于流程图中标绿。（该流程图作为车辆动力学功能开发的进度条）
+## *第七点*：Carsim参数结构中不合理的地方，标橙色，并提出改进建议，（但仍然保留carsim的参数名字，便于数据结构转换）。
+## *第八点*：思考需要前端实现的功能，并且进行样式上的标注。
+## *第九点*：需要美术配合和示意图的地方，请标注
