--- a/车辆动力学代码开发流程.md
+++ b/车辆动力学代码开发流程.md
@@ -1,6 +1,6 @@
 # 车辆动力学代码功能开发流程
 ## 1：对照Carsim学习功能，了解每个参数的作用（粗学）；
-## 2：编写配置流程图和后端配置文件；
+## 2：编写[配置流程图](后端编写流程图说明.md)和后端配置文件；
 ## 3：确立该功能的计算方式，用Markdown编写帮助文档（精学）
 ## 4：simulink中实现该功能；
 ***
