前端的规范要求

--- a/前端功能说明.md
+++ b/前端功能说明.md
@@ -1,9 +1,9 @@
 ## 动力学前端页面分为四个模块：
 ### 模块一：[UE展示区（包含2D图切换）](前端模块/UE展示区模块功能说明.md)；
-### 模块二：参数编辑区；
+### 模块二：[参数编辑区](前端模块/参数编辑区模块功能说明.md)；
 ### 模块三：[流程图区](前端模块/流程图模块功能说明.md)；
-### 模块四：功能说明区。
+### 模块四：文本解释区。
 ***
 
-四个模块演示如下：
-![四个模块演示](前端模块/前端四模块分区.gif)
+四个模块演示图如下：
+![四个模块演示](前端模块/Graph/前端四模块分区.gif)
