--- a/前端模块/流程图模块功能说明.md
+++ b/前端模块/流程图模块功能说明.md
@@ -1,9 +1,24 @@
+[返回](../前端功能说明.md)
+
 ## 流程图模块功能说明
 [=======>流程图所在位置<========](https://kdocs.cn/l/ctURgwXLLiqf)
 ### 功能一：选择某一功能后，其会冒号对应该功能，如Powertrain:Engine;
-### 功能二：如果没有选择，或者功能没有实现，其在流程图中标蓝<span style="color: blue;">Powertrain:（未定义）</span>；
+![冒号对应所选功能.jpg](Graph/冒号对应所选功能.png)
+- - -
+### 功能二：如果用户没有定义某个参数或者某个功能，其在流程图中标蓝<span style="color: blue;">Powertrain:（未定义）</span>；
+![参数未定义.png](Graph/参数未定义.png)
+- - -
 ### 功能三：点击流程图的某一模块，会跳转至配置界面；
-### 功能四：每次输入配置流程图会自动刷新，且展开至当前流程图界面；
-### 功能五：数据配置冲突时，流程图中标红，并标上<span style="color: red;">Powertrain:Engine（与运行控制：Simulink:Motor冲突）</span>；（可以在代码中通过维护一个有向图实现，哪两个数据同时定义时报错）
+![流程图点击跳转.gif](Graph/流程图点击跳转.gif)
+- - -
+### 功能四：参数编辑区输入参数时，流程图会自动刷新，且展开至对应的界面；
+![流程图与参数编辑区相统一.png](Graph/流程图与参数编辑区相统一.png)
+- - - 
+### 功能五：数据配置冲突时，流程图中标红，并标上<span style="color: red;">Powertrain:Engine（与运行控制：Simulink:Motor冲突）</span>；
+这个后续会在联合仿真时经常用到，当用户定义了某些参数由外部导入，但是在Rsim参数界面也同时设置了该参数时，两个参数便会产生冲突。
+（可以在代码中通过维护一个参数名的有向图实现，哪两个数据同时定义时报错）
+
+- - -
 ### 功能六: 增加一个按钮，跳转至下一个未定义，点击后，流程图和配置界面同时跳转至未定义处。
+- - -
 ### 功能七：增加一个按钮，跳转至下一个配置冲突处，点击后，流程图和配置界面同时跳转至未定义处。
